headless/viz: Use unlimited surface deadlines for full-pipe mode.

Also reenables previously flaky CompositorController browsertest.

Bug: 811288
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.android:android_optional_gpu_tests_rel
Change-Id: Id2d8ab78e3117941c3426b3dd5628de171833bb7
Reviewed-on: https://chromium-review.googlesource.com/928706
Reviewed-by: Fady Samuel <fsamuel@chromium.org>
Reviewed-by: Antoine Labour <piman@chromium.org>
Commit-Queue: Eric Seckler <eseckler@chromium.org>
Cr-Commit-Position: refs/heads/master@{#538161}
Former-commit-id: 5b74eba3c346a54a96781f987ae2f68254e3344f