cc/base/switches.cc
@@ -53,11 +53,6 @@ const char kCheckDamageEarly[] = "check-damage-early";
 // Enables the GPU benchmarking extension
 const char kEnableGpuBenchmarking[] = "enable-gpu-benchmarking";
 
-// Effectively disables pipelining of compositor frame production stages by
-// waiting for each stage to finish before completing a frame.
-const char kRunAllCompositorStagesBeforeDraw[] =
-    "run-all-compositor-stages-before-draw";
-
 // Always asks the display compositor to send back presentation times.
 const char kAlwaysRequestPresentationTime[] =
     "always-request-presentation-time";
