cc/base/switches.h
@@ -31,7 +31,6 @@ CC_BASE_EXPORT extern const char kCheckDamageEarly[];
 
 // Switches for both the renderer and ui compositors.
 CC_BASE_EXPORT extern const char kEnableGpuBenchmarking[];
-CC_BASE_EXPORT extern const char kRunAllCompositorStagesBeforeDraw[];
 CC_BASE_EXPORT extern const char kAlwaysRequestPresentationTime[];
 
 // Debug visualizations.
